# delray

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md  README_CN.md  build.rs
.github/workflows/: build-test.yml  ci.yml  release.yml
.scratch/cross-platform-support/: spec.md
.scratch/cross-platform-support/issues/: 01-listeners-linux-process-attribution.md  02-conservative-process-resolution.md  03-link-types-and-interface-selection.md  04-process-identity-path-last-seen.md  05-tui-process-details.md  06-linux-shared-validation.md  07-windows-build-and-adaptation.md  08-windows-acceptance-and-readme.md  09-process-attribution-diagnostics.md  (+2 more)
.scratch/outbound-domain-stats/: spec.md
docs/: development.md  idea-v1.md  release-checklist.md
docs/adr/: 0001-use-listeners-and-rust-1.88.md  0002-tui-palette-by-color-tier.md  0003-stable-version-with-draft-release.md  0004-single-manual-release-workflow.md  0005-validate-before-pushing-release-metadata.md  0006-statically-link-windows-crt.md  0007-pin-npcap-sdk-for-windows-builds.md  0008-pin-release-build-toolchain.md  0009-recover-release-after-tag-push.md  0010-license-apache-2.md  0011-follow-current-stable-rust.md
docs/agents/: issue-tracker.md
docs/public/: README.md  idea-v2.md
scripts/: check-tui-latency.sh
src/: attribution.rs  capture.rs  domain_parse.rs  domain_parse_composite.rs  domain_parse_http.rs  domain_parse_tls.rs  flow_table.rs  main.rs  palette.rs  pipeline.rs  proc_table.rs  report.rs  session.rs  stats.rs  tui.rs
(+10 files in other folders)
