[package]
name = "delray"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
pcap = "2"
etherparse = "0.19"
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
