[package]
name = "delray"
version = "0.1.1"
edition = "2024"
rust-version = "1.96"
description = "A command-line network traffic analyzer with process and IP attribution"
license = "Apache-2.0"
repository = "https://github.com/power4j/delray"
readme = "README.md"

[dependencies]
pcap = "2"
etherparse = "0.21"
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
listeners = "0.6"
tls-parser = { version = "0.12", default-features = false }
httparse = "1.10"
moka = { version = "0.12", default-features = false, features = ["sync"] }
